--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ body {
 }
 
 [data-slides-home] {
-    background-image: url(../imgs/img1.jpg) center center;
+    background-image: url(../imgs/img3.jpg) center center;
     transition: background-image 1s linear;
 }
 
@@ -160,3 +160,9 @@ body {
     padding: 9px 18px;
     display: block;
 }
+
+@media (max-width : 450px) { 
+    #logo-home {
+        margin-top: -80px;
+    }
+ }
