--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,5 @@
 body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-form,
-fieldset,
-input,
-textarea,
-p,
-blockquote,
-th,
-td {
+div {
     padding: 0;
     margin: 0;
 }
@@ -29,66 +8,16 @@ a {
     text-decoration: none;
 }
 
-table {
-    border-spacing: 0;
-}
-
-fieldset,
 img {
     border: 0;
 }
 
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-strong,
-th,
-var {
-    font-weight: normal;
-    font-style: normal;
-}
-
-strong {
-    font-weight: bold;
-}
-
-ol,
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-caption,
-th {
-    text-align: left;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-weight: normal;
-    font-size: 100%;
-    margin: 0;
-    padding: 0;
-    color: #444;
-}
-
-q:before,
-q:after {
-    content: '';
-}
-
-abbr,
-acronym {
-    border: 0;
-}
 
 body {
     font-family: arial, helvetica;
@@ -161,8 +90,8 @@ body {
     display: block;
 }
 
-@media (max-width : 720px) { 
+@media (max-width: 720px) {
     #logo-home {
         margin-top: -80px;
     }
- }
+}
